<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:id="@+id/view"
        android:layout_marginBottom="8dp"
        android:layout_alignParentStart="false">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_name_edit_text"
            android:hint="@string/text_hint_title_list"/>
    </android.support.design.widget.TextInputLayout>


    <requestFocus
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="606dp"
        android:layout_marginStart="606dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignRight="@+id/button_ok"
        android:layout_alignEnd="@+id/button_ok">

        <Button
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:id="@+id/button_ok"
            android:minWidth="64dp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/text_save"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/hbutton"
            android:layout_weight="1"
            android:layout_marginLeft="8dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:id="@+id/button_cancel"
            android:text="@string/text_cancel"
            android:minWidth="64dp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/hbutton"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>